--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/application-context.xml 
-            /WEB-INF/spring/security.xml
+            /WEB-INF/security.xml
         </param-value>
     </context-param>
     
@@ -52,7 +52,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring/servlet-context.xml</param-value>
+            <param-value>/WEB-INF/servlet-context.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
